@startuml
title Diagrama de Classes - Sistema de Precificação de Produtos de Confeitaria
skinparam linetype ortho

class Produto {
    - id: Long
    - descricao: String
    - modoPreparo: String
    - conservadoGelado: boolean
}

class Embalagem {
    - id: Long
    - descricao: String
    - quantidadePorPacote: Integer
    - precoPacote: Double
}

class Receita {
    - id: Long
    - nome: String
    - modoPreparo: String
	- rendimento: Integer
	- tipoRendimento: String
}

abstract class Ingrediente {
    - id: Long
    - nome: String
    - precoTotal: Double
    - organico: boolean
}

class IngredienteSeco {
    - pesoLiquidoEmGramas: Integer
}

class IngredienteLiquido {
    - volumeLiquidoEmML: Integer
}

class IngredienteUnitario {
    - quantidadeUnidades: Integer
}

class ProdutoIngrediente {
    - id: Long
    - quantidade: Double
}

class ReceitaIngrediente {
    - id: Long
    - quantidade: Double
}

class ProdutoReceita {
    - id: Long
    - quantidade: Double
}

Ingrediente <|-u- IngredienteSeco
Ingrediente <|-u- IngredienteLiquido
Ingrediente <|-u- IngredienteUnitario

Ingrediente }o-l-|{ Receita
Ingrediente }o-u-|{ Produto
Receita     }o-d-|{ Produto

(Receita, Ingrediente) . ReceitaIngrediente
(Produto, Ingrediente) . ProdutoIngrediente
(Produto, Receita) . ProdutoReceita

Produto }o--o{  Embalagem 

@enduml